--- a/netlify.toml
+++ b/netlify.toml
@@ -10,11 +10,13 @@
   from = "/api/*"
   to = "/.netlify/functions/___netlify-handler"
   status = 200
+  force = true
 
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/___netlify-handler"
   status = 200
+  force = true
 
 [[headers]]
   for = "/*"
