--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,7 @@
 [build.environment]
   NODE_VERSION = "18"
 
+[context.production.environment]
+  NEXTAUTH_URL = "https://engineerssite.netlify.app/"
+  MONGODB_URI="mongodb+srv://engineers:engineers123%21%40%23@engineersdb.masu76i.mongodb.net/EngineerDB?retryWrites=true&w=majority&appName=EngineersDB"
+
