--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "mongoose": "^8.4.1",
     "next": "14.2.5",
     "next-auth": "4.24.7",
+    "quill": "^2.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-quill": "^2.0.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
     "zod": "^3.23.8"
